--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
+        "test": "vitest",
         "preview": "vite preview"
     },
     "dependencies": {
@@ -15,10 +16,13 @@
         "react-router-dom": "^6.3.0"
     },
     "devDependencies": {
+        "@testing-library/react": "^13.3.0",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
         "@vitejs/plugin-react": "^2.0.0",
+        "jsdom": "^20.0.0",
         "typescript": "^4.6.4",
-        "vite": "^3.0.0"
+        "vite": "^3.0.0",
+        "vitest": "^0.19.1"
     }
 }
