--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,14 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
+        "cypress": "cypress run",
+        "cypress:open": "cypress open",
         "test": "vitest",
         "preview": "vite preview"
     },
     "dependencies": {
         "axios": "^0.27.2",
+        "cypress": "^10.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.3.0"
